fixed navbar wrapping on phone

--- a/style.scss
+++ b/style.scss
@@ -353,7 +353,7 @@ div.footer{
 }
 //footer
 @media only screen and (max-width: 700px) {
-  nav{
+  .footer nav{
     width: 100%;
     display: flex;
     justify-content: center;
